[package]
name = "roll-dice"
version = "0.1.0"
description = "A library for rolling dice"
keywords = ["dice", "roller", "roll", "game", "dnd"]
documentation = "https://docs.rs/roll-dice"
repository = "https://github.com/avikuloff/dice-rs"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"], optional = true }
